<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/Registration">

    <fragment
        android:id="@+id/NewsFragment"
        android:name="fragments.NewsFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/news_fragment">

        <action
            android:id="@+id/action_NewsFragment_to_FeedFragment"
            app:destination="@id/FeedFragment" />
    </fragment>
    <fragment
        android:id="@+id/FeedFragment"
        android:name="fragments.FeedFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/feed_fragment">

        <action
            android:id="@+id/action_FeedFragment_to_NewsFragment"
            app:destination="@id/NewsFragment" />
    </fragment>
    <fragment
        android:id="@+id/Registration"
        android:name="fragments.LoginFragment"
        android:label="@string/registration"
        tools:layout="@layout/login_fragment">

        <action
            android:id="@+id/action_LoginFragment_to_NewsFragment"
            app:destination="@id/NewsFragment" />
    </fragment>
</navigation>