<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context="fragments.FeedFragment">

    <ImageView
        android:id="@+id/animal_image"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_margin="25dp"
        android:layout_marginStart="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/animals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/text_recycler1"
        android:layout_width="91dp"
        android:layout_height="39dp"
        android:layout_margin="10dp"
        android:text="@string/animals"
        android:textColor="@color/purple_700"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="261dp" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="341dp"
        android:layout_height="332dp"
        android:paddingHorizontal="10dp"
        android:paddingTop="20dp"
        android:text="@string/about_animals"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="300dp" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
 />
</androidx.constraintlayout.widget.ConstraintLayout>